8318913: The module-infos for --release data do not contain pre-set versions
Co-authored-by: Erik Joelsson <erikj@openjdk.org>
Reviewed-by: vromero, ihse